# IoT-SAFE-APDU-library

./: CMakeLists.txt  LICENSE  README.md  keywords.txt  library.properties
examples/: CMakeLists.txt  basic_test.c
examples/AWS_IoT_Arduino_MKRNB1500/: AWS_IoT_Arduino_MKRNB1500.ino  IoTSAFE.h  arduino_secrets.h
examples/Azure_IoT_Hub_Arduino_MKRNB1500/: Azure_IoT_Hub_Arduino_MKRNB1500.ino  arduino_secrets.h
examples/LiveObjects_Arduino_MKR1500NB/: IoTSAFE.cpp  LiveObjects_Arduino_MKR1500NB.ino  arduino_secrets.h
examples/LiveObjects_Arduino_TinyGSM/: LiveObjects_Arduino_TinyGSM.ino
examples/MultiCloud_Arduino_MKR1500NB/: MultiCloud_Arduino_MKR1500NB.ino  arduino_secrets.h
examples/MultiCloud_Arduino_TinyGSM/: ArduinoBearSSLConfig.h  IoTSAFE.cpp  MultiCloud_Arduino_TinyGSM.ino  arduino_secrets.h
examples/basic_test/: basic_test.ino
examples/common/: IoTSAFE.cpp  IoTSAFE.h
src/: iot_safe.c  iot_safe.h  iot_safe_arduino_internal.cpp  iot_safe_arduino_internal.h  iot_safe_internal.c  iot_safe_internal.h  iot_safe_pcsc_internal.c  iot_safe_pcsc_internal.h
